# sea-temperatures

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  docker-compose.yml  eslint.config.mjs  hacs.json  package-lock.json  package.json  pyproject.toml  rollup.config.js  tsconfig.json  vitest.config.ts
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: hassfest.yaml  release.yml  tests.yml  validation.yml
custom_components/seatemperature/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py
custom_components/seatemperature/tests/: test_api.py
custom_components/seatemperatures/: __init__.py  api.py  config_flow.py  const.py  manifest.json  parser.py  sea-temperatures-card.js  sensor.py
custom_components/seatemperatures/tests/: test_api.py
custom_components/seatemperatures/tests/fixtures/: copenhagen.html  miami_beach.html
custom_components/seatemperatures/translations/: de.json  en.json  es.json  fr.json  it.json
frontend/: .gitignore  package-lock.json  package.json  rollup.config.js  tsconfig.json
frontend/src/: declarations.d.ts  editor.ts  localize.ts  sea-temperatures-card.ts  svg.d.ts  types.ts  utils.ts
frontend/src/styles/: card.styles.scss  editor.styles.scss
frontend/src/translation/: de.json  en.json  es.json  fr.json  it.json
frontend/test/: editor.test.ts  sea-temperatures-card.test.ts  setup.ts
test_config/: configuration.yaml  ui-lovelace.yaml
