[project]
name = "seatemperatures"
version = "2.1.0"
description = "Home Assistant custom component for sea temperatures"
requires-python = ">=3.12"
dependencies = [
    "homeassistant",
    "aiohttp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-homeassistant-custom-component",
    "beautifulsoup4",
    "lxml",
    "pytest-asyncio",
    "pytest-socket",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]
